[demo] fix cropping and bottom padding

--- a/demo/style.css
+++ b/demo/style.css
@@ -46,13 +46,13 @@ main {
 .flexbox {
     display: block flex;
     flex-flow: row wrap;
-    align-content: space-evenly;
     justify-content: space-evenly;
+    align-content: stretch;
+    align-items: center;
     width: 100%;
-    height: 100%;
+    height: fit-content;
     margin: 0;
     padding: 0;
-
 }
 
 .window {
@@ -61,15 +61,8 @@ main {
     margin: 25px;
     width: fit-content;
     height: fit-content;
-
     border: 3px solid #222222;
     background-color: var(--window-background);
-}
-
-.window img {
-    display: block;
-    margin: 0px;
-    padding: 0px;
 }
 
 .window_title {
@@ -111,6 +104,12 @@ main {
 
 .window_controls_info {
     background-color: #4444ff;
+}
+
+.userpic img {
+    display: block;
+    margin: 0px;
+    padding: 0px;
 }
 
 p {
